[package]
name = "pgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
paste = "1.0.14"
pgw = "0.1.9"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
