[package]
name = "pgm_proc"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxaier/pgm"
repository = "https://github.com/xxaier/pgm"
description = "easy use prepared sql for postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
pgw = "0.1.9"
proc-macro2 = "1.0.66"
regex = "1.9.3"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
